src/compiletest/lcell-13.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> $DIR/lcell-13.rs:9:5
  |
8 |     fn is_sync<T: Sync>() {}
  |                   ---- required by this bound in `is_sync`
9 |     is_sync::<LCell<'_, Rc<()>>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `Rc<()>`
  = note: required because of the requirements on the impl of `Sync` for `LCell<'_, Rc<()>>`

error[E0277]: `Rc<()>` cannot be shared between threads safely
 --> $DIR/lcell-13.rs:9:5
  |
8 |     fn is_sync<T: Sync>() {}
  |                   ---- required by this bound in `is_sync`
9 |     is_sync::<LCell<'_, Rc<()>>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Rc<()>`
  = note: required because of the requirements on the impl of `Sync` for `LCell<'_, Rc<()>>`
